# textpad

./: CMakeLists.txt  CMakePresets.json  Makefile  conanfile.txt
src/: editor.cpp  editor.h  explorer.cpp  explorer.h  main.cpp  state.h  style_catppuccin_mocha.h
